--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
         var $body = $('body');
         $body.html('');
 
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
+        var oldTweet = 0;
+
+        function newTweet() {
+
+          var index = streams.home.length - 1;
+          while(index >= oldTweet){
+           var tweet = streams.home[index];
+           var $tweet = $('<div></div>');
+           $tweet.text('@' + tweet.user + ': ' + tweet.message);
+           $tweet.appendTo($body);
+           index -= 1;
+           oldTweet ++;
+          }
+          setTimeout( function() {
+            newTweet();
+          }, 1000);
         }
+        newTweet();
 
       });
 
