--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           while(index >= oldTweet){
            var tweet = streams.home[index];
            var $tweet = $('<div></div>');
-           $tweet.text('@' + tweet.user + ': ' + tweet.message);
+           $tweet.text(tweet.created_at + '@' + tweet.user + ': ' + tweet.message);
            $tweet.appendTo($body);
            index -= 1;
            oldTweet ++;
