--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         $('<h1></h1>').text("Twittler").appendTo($body);
         $('<button class="refresh">Refresh</button>').appendTo($body);
-        $('<ul class="Tweets">').appendTo($body);
+        $('<ul class="tweets">').appendTo($body);
 
         var oldTweet = 0;
 
@@ -23,9 +23,12 @@
           var index = streams.home.length - 1;
           while(index >= oldTweet){
            var tweet = streams.home[index];
+           var $user = $('<li data-user='+tweet.user+'></li>');
            var $tweet = $('<div></div>');
-           $tweet.text(tweet.created_at + '@' + tweet.user + ': ' + tweet.message);
-           $tweet.prependTo(".Tweets");
+           $user.text(tweet.created_at + '@' + tweet.user + ":");
+           $tweet.text(tweet.message);
+           $user.prependTo(".tweets");
+           $("li").first().append($tweet);
            index -= 1;
            oldTweet ++;
           }
@@ -36,6 +39,7 @@
         $('button').on('click', function() {
           newTweet();
         });
+
 
       });
 
